# Python-M3GP

./: Arguments.py  Main_M3GP_classification_example.py  Main_M3GP_regression_example.py  Main_M3GP_standalone.py  pyproject.toml  setup_dev.sh
M3GP.egg-info/: PKG-INFO  SOURCES.txt
m3gp/: GeneticOperators.py  Individual.py  M3GP.py  MahalanobisDistanceClassifier.py  Node.py
